# al_idaad_server/src/models/banner.model.ts
@@ -2,6 +2,8 @@ import { Schema, Document, model, Model } from "mongoose";
 
 export interface IBanner extends Document {
     url: string;
+    desktopUrl?: string;
+    mobileUrl?: string;
     createdAt?: Date;
     updatedAt?: Date;
 }
@@ -9,6 +11,8 @@ export interface IBanner extends Document {
 const BannerSchema = new Schema<IBanner>(
     {
         url: { type: String, required: true, unique: true },
+        desktopUrl: { type: String, required: true },
+        mobileUrl: { type: String, required: true },
     },
     { timestamps: true },
 );
