# al_idaad_server/src/models/offer.model.ts
@@ -2,6 +2,8 @@ import { Schema, Document, model, Model } from "mongoose";
 
 export interface IOffer extends Document {
     url: string;
+    desktopUrl?: string;
+    mobileUrl?: string;
     productId: string;
     createdAt?: Date;
     updatedAt?: Date;
@@ -10,6 +12,8 @@ export interface IOffer extends Document {
 const OfferSchema = new Schema<IOffer>(
     {
         url: { type: String, required: true },
+        desktopUrl: { type: String, required: true },
+        mobileUrl: { type: String, required: true },
         productId: { type: String, required: true },
     },
     { timestamps: true },
